Mejor compatibilidad con el iText 2.1.7 de serie